<resources>
    <string name="app_name">OdectyApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_main_view_text">Zatím nemáte přidané žádné měřáky.\nZačněte kliknutím na tlačítko +.</string>
    <string name="add_meter">Přidat měřák</string>
    <string name="meter_icon_description">Ikona měřiče</string>
    <string name="take_reading_button">Provést nový odečet</string>
    <string name="master_user_detail_no_meters">Tento uživatel zatím nemá přidané žádné měřáky.</string>
    <string name="search_by_name_address">Hledat (jméno, adresa)…</string>
    <string name="month">Měsíc</string>
    <string name="reading_status">Status odečtu</string>
    <string name="apply">Aplikovat</string>
    <string name="reset">Reset</string>
    <string name="show_filter">Zobrazit Filtr</string>
    <string name="hide_filter">Skrýt Filtr</string>
    <string name="export_data">Exportovat data</string>
    <string name="new_reading_value">Nová hodnota odečtu</string>
    <string name="click_for_detail">Klikněte pro detail</string>
    <string name="export_format_title">Vyberte formát exportu</string>
    <string name="status_waiting_for_sync">Čeká na synchronizaci</string>
    <string name="edited_by_admin">Upraveno správcem</string>
    <string name="reading_value_with_unit">%1$s %2$s</string>
    <string name="warning_dialog_title">Pozor, možná chyba</string>
    <string name="warning_dialog_message_default">Nová hodnota je o více než 100% vyšší než poslední odečet. Jste si jistý/á?</string>
    <string name="warning_dialog_confirm">Přesto uložit</string>
    <string name="warning_icon_description">Varování</string>
    <string name="original_meter_name_format">(%s)</string>
    <string name="original_meter_name_label">Původní název: %s</string>
    <string name="meter_name_hint">Název měřáku</string>
    <string name="meter_type_electricity">Elektřina</string>
    <string name="meter_type_gas">Plyn</string>
    <string name="meter_type_water">Voda</string>
    <string name="dialog_cancel">Zrušit</string>
    <string name="dialog_save">Uložit</string>
    <string name="meter_options">Možnosti měřáku</string>
    <string name="action_edit">Upravit</string>
    <string name="action_delete">Smazat</string>
    <string name="save_description_success">Popis byl úspěšně uložen.</string>
    <string name="save_description_error">Chyba při ukládání popisu: %s</string>
    <string name="add_description_dialog_title">Popis pro měřák %s</string>
    <string name="reading_not_found">Odečet nebyl nalezen.</string>
    <string name="edit_value">Upravit hodnotu</string>
    <string name="cannot_edit_unsynced_reading">Nelze upravit nesynchronizovaný odečet.</string>
    <string name="reading_deleted_successfully">Odečet úspěšně smazán.</string>
    <string name="error_deleting_reading">Chyba při mazání: %s</string>
    <string name="value_updated_successfully">Hodnota úspěšně aktualizována.</string>
    <string name="error_updating_value">Chyba při aktualizaci: %s</string>
    <string name="edit_reading_value">Upravit hodnotu odečtu</string>
    <string name="save">Uložit</string>
    <string name="cancel">Zrušit</string>
    <string name="please_enter_valid_numeric_value">Prosím, zadejte platnou číselnou hodnotu.</string>
    <string name="editing_locked">Úprava Uzamčena</string>
    <string name="reading_locked_message">Tento odečet byl již zkontrolován a upraven správcem. Další změny nejsou možné.</string>
    <string name="i_understand">Rozumím</string>
    <string name="delete_reading">Smazat odečet</string>
    <string name="delete_reading_confirmation">Opravdu chcete smazat tento odečet? Tato akce je nevratná.</string>
    <string name="delete">Smazat</string>
    <string name="not_available">N/A</string>
    <string name="no_reading_yet">Zatím žádný odečet</string>
    <string name="user_info_title">Doplňte své údaje</string>
    <string name="user_info_name_hint">Jméno</string>
    <string name="user_info_surname_hint">Příjmení</string>
    <string name="user_info_address_hint">Adresa</string>
    <string name="user_info_phone_hint">Telefonní číslo</string>
    <string name="user_info_save_button">Uložit a pokračovat</string>
    <string name="profile_title">Váš Profil</string>
    <string name="profile_save_changes">Uložit změny</string>
    <string name="user_detail_name_label">Jméno:</string>
    <string name="user_detail_address_label">Adresa:</string>
    <string name="user_detail_phone_label">Telefon:</string>
    <string name="user_detail_user_id_label">User ID:</string>
    <string name="user_detail_meter_count_label">Počet měřáků:</string>
    <string name="user_detail_last_reading_label">Poslední odečet:</string>
    <string name="user_detail_email_label">Email:</string>
    <string name="user_full_name">%1$s %2$s</string>
    <string name="profile_picture">Profilový obrázek</string>
    <string name="default_username">Uživatel</string>
    <string name="not_logged_in">Nepřihlášen</string>
    <string name="change_profile_picture_title">Změnit profilový obrázek</string>
    <string name="change_picture">Změnit obrázek</string>
    <string name="remove_picture">Odstranit obrázek</string>
    <string name="note">Poznámka</string>
    <string name="phone_number">Telefonní číslo</string>
    <string name="edit_user_details">Upravit údaje / Přidat poznámku</string>
    <string name="edit_user_details_title">Upravit údaje klienta</string>
    <string name="user_data_saved_successfully">Uživatelské údaje uloženy.</string>
    <string name="block_user">Zablokovat uživatele</string>
    <string name="unblock_user">Odblokovat uživatele</string>
    <string name="block_user_confirm_title">Potvrdit akci</string>
    <string name="block_user_confirm_message">Opravdu chcete zablokovat tohoto uživatele? Ztratí přístup do aplikace.</string>
    <string name="unblock_user_confirm_message">Opravdu chcete odblokovat tohoto uživatele? Získá zpět přístup do aplikace.</string>
    <string name="user_blocked_successfully">Uživatel byl zablokován.</string>
    <string name="user_unblocked_successfully">Uživatel byl odblokován.</string>
    <string name="user_block_failed">Akci pro blokování/odblokování se nepodařilo provést.</string>
    <string name="blocked_user_icon_description">Ikona zablokovaného uživatele</string>
    <string name="delete_user">Smazat uživatele</string>
    <string name="delete_user_confirm_title">Smazat uživatele?</string>
    <string name="delete_user_confirm_message">Opravdu chcete trvale smazat tohoto uživatele a všechna jeho data (včetně měřáků a odečtů)? Tato akce je nevratná.</string>
    <string name="user_deleted_successfully">Uživatel byl úspěšně smazán.</string>
    <string name="user_delete_failed">Smazání uživatele se nezdařilo.</string>
    <string name="default_web_client_id">945101370255-cbjrc6423gvvqkuf5gn83h994bb33ul3.apps.googleusercontent.com</string>
    <string name="account_status">Stav účtu</string>
    <string name="blocked_users">Zablokovaní</string>
    <string name="active_users">Odblokovaní</string>
    <string name="all_users">Vše</string>
    <string name="changes_saved_successfully">Změny úspěšně uloženy.</string>
    <string name="downloading_images_progress">Stahuji obrázky… (%1$d/%2$d)</string>
    <string name="images_exported_success">Obrázky úspěšně exportovány (%1$d bytes).</string>
    <string name="filter_is_active">Filtr je Aktivní</string>
    <string name="export_images_zip">Exportovat obrázky (ZIP)</string>
    <string name="export_excel_xlsx">Exportovat do Excel (XLSX)</string>
    <string name="export_csv">Exportovat do CSV</string>
    <string name="manual_reading_photo_preview_description">Náhled pořízené fotografie</string>
    <string name="manual_reading_helper_text">Pro desetinná místa (červená čísla) použijte tečku "."</string>
    <string name="manual_reading_value_hint">Zadejte hodnotu z měřáku</string>
    <string name="success_icon_description">Úspěch</string>
    <string name="successfully_saved">Úspěšně uloženo</string>
    <string name="master_user_meters_title">Přehled uživatele - %1$s</string>
    <string name="user_detail_title">Přehled - %1$s</string>
    <string name="user_detail_title_with_name">Přehled - %1$s</string>
    <string name="user_detail_title_default">Přehled uživatele</string>
    <string name="master_user_detail_default_title">Měřáky uživatele</string>
    <string name="home">Domů</string>
    <string name="profile">Profil</string>
    <string name="admin_settings">Nastavení správce</string>
    <string name="hide_my_profile">Skrýt můj profil</string>
    <string name="account">Účet</string>
    <string name="logout">Odhlásit se</string>
    <string name="empty_chart_text">Pro zobrazení grafu je potřeba alespoň dva odečty.</string>
    <string name="login_title">Přihlášení</string>
    <string name="login_email_hint">E-mail</string>
    <string name="login_password_hint">Heslo</string>
    <string name="login_button_text">Přihlásit se</string>
    <string name="login_register_prompt">Ještě nemáte účet? Zaregistrujte se</string>
    <string name="login_google_sign_in">Přihlásit se přes Google</string>
    <string name="user_detail_button_description">Zobrazit detail uživatele</string>
    <string name="locations">Odběrná místa</string>
    <string name="add_location">Přidat odběrné místo</string>
    <string name="no_locations">Žádná odběrná místa</string>
    <string name="no_locations_yet">Zatím nemáte žádná odběrná místa</string>
    <string name="add_first_location">Přidejte první odběrné místo pro správu měřáků</string>
    <string name="location_icon">Ikona místa</string>
    <string name="address_icon">Ikona adresy</string>
    <string name="meters_icon">Ikona měřáků</string>
    <string name="default_location">Výchozí</string>
    <string name="no_meters">Žádné měřáky</string>
    <string name="meter">měřák</string>
    <string name="meters">měřáky</string>
    <string name="set_as_default">Nastavit jako výchozí</string>
    <string name="delete_location_title">Smazat odběrné místo?</string>
    <string name="delete_location_message">Opravdu chcete smazat místo \"%1$s\"? Tuto akci nelze vrátit zpět.</string>
    <string name="location_deleted">Místo smazáno</string>
    <string name="default_location_updated">Výchozí místo aktualizováno</string>
    <string name="user">Uživatel</string>
    <string name="add_new_location">Nové odběrné místo</string>
    <string name="location_name">Název místa</string>
    <string name="location_name_helper">Např. Hlavní bydliště, Chata, Garáž</string>
    <string name="location_name_required">Název místa je povinný</string>
    <string name="address_helper">Např. Hlavní 123, Praha 1</string>
    <string name="note_optional">Poznámka (volitelné)</string>
    <string name="note_helper">Např. Rodinný dům, 3. patro</string>
    <string name="set_as_default_location">Nastavit jako výchozí místo</string>
    <string name="default_location_description">Výchozí místo se použije pro nové měřáky</string>
    <string name="default_location_icon">Ikona výchozího místa</string>
    <string name="info_icon">Ikona informace</string>
    <string name="edit_location">Upravit odběrné místo</string>
    <string name="loading_location">Načítání místa…</string>
    <string name="address">Adresa</string>
    <string name="add_new_meter">Nový měřák</string>
    <string name="meter_icon">Ikona měřáku</string>
    <string name="location">Odběrné místo</string>
    <string name="location_helper">Vyberte místo, kde se měřák nachází</string>
    <string name="meter_name">Název měřáku</string>
    <string name="meter_name_helper">Např. Elektroměr v přízemí</string>
    <string name="meter_type">Typ měřáku</string>
    <string name="meter_type_helper">Vyberte typ měřáku</string>
    <string name="add_meter_info">Měřák bude přiřazen k vybranému odběrnému místu. Později můžete měřák přesunout na jiné místo.</string>
</resources>